# Datavision

./: .env.example  .env.production  .gitattributes  .gitignore  AUTOML_DOCUMENTATION.md  COMPLETE_FIX_GUIDE.md  DEPLOYMENT_AGENT_NOTIFICATIONS.md  DEPLOYMENT_HUGGINGFACE.md  DOMAIN_SETUP_RESEND.md  Dockerfile  FIX_APPLIED.md  GROQ_LOAD_BALANCER.md  HOW_TO_CHECK_LOGS.md  HUGGINGFACE_DEPLOYMENT.md  MLOPS.md  PRD.md  RAG_ARCHITECTURE.md  README.md  TEST_GUIDE.md  adult_automl_verify.ipynb  deploy_hf.ps1  disease_symptoms_test.csv  docker-compose.yml  fix_pages.py  fix_renderer.py  push_log.txt  pyproject.toml  requirements.txt  start.sh  test_data_hr_comprehensive.csv  test_engine_compiler.py  test_fixed.py  test_groq.py  test_settings_api.py  test_user_data.py  test_visual_compiler.py  user_orders.csv  verify_adult_automl.py  verify_automl_model.py  verify_disease_detection.py  (+3 more)
.gemini/: settings.json
agents/: adaptive_rag.py  nodes.py  router.py  state.py
backend/: check_tables.py  cols.txt  crash_log.txt  crash_log_2.txt  create_db.py  create_mlops_tables.py  datavision.db  debug_chat.py  debug_dashboard.py  fix_emojis.py  init_db.py  inspect_file.py  main.py  read_log.py  reproduce_logs.py  search_out.txt  search_out2.txt  test_advanced_engine.py  test_all_components.py  test_api.py  test_api_v2.py  test_autoheal.py  test_imports.py  test_models.py  test_pipeline.py  test_prediction.py  test_predictions.py  test_production.py  test_server.py  test_simple.py  test_ultra_automl.py  test_v2_format.py  verify_fallback.py
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
config/: settings.py
core/: cache.py  charts.py  llm.py  memory.py  vision.py
frontend/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js  (+2 more)
(+586 files in other folders)
