[project]
name = "ai-business-analyst"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp==3.9.0",
    "beautifulsoup4>=4.14.3",
    "faiss-cpu>=1.13.0",
    "fastapi>=0.123.7",
    "google-generativeai>=0.8.5",
    "groq>=0.5.0",
    "langchain-groq>=1.1.0",
    "networkx>=3.6",
    "numpy>=2.3.5",
    "openai>=1.30.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pillow>=12.0.0",
    "plotly>=6.5.0",
    "prophet>=1.1.0",
    "pydantic>=2.12.5",
    "pypdf>=6.4.0",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.1",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.20",
    "python-pptx>=1.0.2",
    "rank-bm25>=0.2.2",
    "requests>=2.32.5",
    "scikit-learn>=1.3.0",
    "sentence-transformers>=5.1.2",
    "statsmodels>=0.14.0",
    "streamlit>=1.52.0",
    "supabase>=2.0.0",
    "uvicorn[standard]>=0.38.0",
]
